fix project display on smaller screens

--- a/landing_page.css
+++ b/landing_page.css
@@ -19,7 +19,7 @@ body{
     margin: 0;
     min-height: 100%;
     display:grid;
-    grid-template-rows: 1fr 6fr 1fr;
+    grid-template-rows: 1fr 7fr 1fr;
     background-color: var(--header_color);
 }
 
@@ -189,7 +189,7 @@ body{
     grid-template-columns: 1fr 16fr 1fr;
     width: 100%;
     height: 95%;
-    padding-left: 15%;
+    padding-left: 10%;
     padding-right: 15%;
 }
 
@@ -248,7 +248,7 @@ body{
     text-decoration: none;
     font-weight: bold;
     border: solid 3px;
-    margin-left: 1.4%;
+    margin-left: 10px;
 }
 
 .demo_text:hover{
